Start to update software links to new docs
+ Fix a few software names
+ Shorten a few links

--- a/dietpi-software.html
+++ b/dietpi-software.html
@@ -78,10 +78,10 @@
 					<button class="nav-link filter" data-filter=".RDesktops">Remote Desktops</button>
 					<button class="nav-link filter" data-filter=".Media">Media Systems</button>
 					<button class="nav-link filter" data-filter=".Download">Download Tools</button>
-					<button class="nav-link filter" data-filter=".Gaming">Emulation/Gaming</button>
+					<button class="nav-link filter" data-filter=".Gaming">Emulation & Gaming</button>
 					<button class="nav-link filter" data-filter=".Camera">Camera</button>
-					<button class="nav-link filter" data-filter=".Cloud">Cloud/Backups</button>
- 					<button class="nav-link filter" data-filter=".Social">Social</button>
+					<button class="nav-link filter" data-filter=".Cloud">Cloud & Backup</button>
+ 					<button class="nav-link filter" data-filter=".Social">Social & Search</button>
  					<button class="nav-link filter" data-filter=".WiFi">WiFi HotSpot</button>
  					<button class="nav-link filter" data-filter=".Automation">Home Automation</button>
  					<button class="nav-link filter" data-filter=".HardwareProjects">Hardware Projects</button>
@@ -91,7 +91,7 @@
  					<button class="nav-link filter" data-filter=".WebserverStacks">Web Server Stacks</button>
  					<button class="nav-link filter" data-filter=".FileServers">File Servers</button>
  					<button class="nav-link filter" data-filter=".VPNServer">VPN</button>
- 					<button class="nav-link filter" data-filter=".DNS">DNS Server</button>
+ 					<button class="nav-link filter" data-filter=".DNS">DNS Servers</button>
   					<button class="nav-link filter" data-filter=".Printing">Printing</button>
 					<button class="nav-link filter" data-filter=".Misc">Misc</button>
 				</nav>
@@ -105,12 +105,10 @@
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div>
-									<span>Pros:</span>Ultra lightweight, fast and functional desktop
-								</div>
-								<div>
-									<span>Cons:</span>TBA
-								</div>
+								<div><a href="docs/software/desktop/#lxde-ultra-lightweight-desktop" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<br>
+								<div><span>Pros:</span>Ultra lightweight, fast and functional desktop</div>
+								<div><span>Cons:</span>TBA</div>
 							</div>
 							<p>Highly optimized lightweight desktop without the bloatware. If you are seeking a raw performance desktop, LXDE is all you need. One of the lightest and functional desktops available. One of our favourites!</p>
 							<div class="project-title"></div>
@@ -133,12 +131,10 @@
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div>
-									<span>Pros:</span>Lightweight, feature-rich
-								</div>
-								<div>
-									<span>Cons:</span>TBA
-								</div>
+								<div><a href="docs/software/desktop/#mate-popular-gnome2-desktop" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<br>
+								<div><span>Pros:</span>Lightweight, feature-rich</div>
+								<div><span>Cons:</span>TBA</div>
 							</div>
 							<p>Popular Gnome2 (a time when Gnome wasn't obsessively bloated) based desktop environment.</p>
 							<div class="project-title"></div>
@@ -156,16 +152,14 @@
 					<div class="col-md-8">
 						<div class="project-description">
 							<div class="project-title clearfix">
-								<h3>XFCE</h3>
+								<h3>Xfce</h3>
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div>
-									<span>Pros:</span>Lightweight, feature-rich
-								</div>
-								<div>
-									<span>Cons:</span>Reduced performance, when compared to LXDE/MATE.
-								</div>
+								<div><a href="docs/software/desktop/#xfce-lightweight-desktop" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<br>
+								<div><span>Pros:</span>Lightweight, feature-rich</div>
+								<div><span>Cons:</span>Reduced performance, when compared to LXDE/MATE.</div>
 							</div>
 							<p>A popular lightweight desktop. Does not perform as well as LXDE/MATE.</p>
 							<div class="project-title"></div>
@@ -187,12 +181,10 @@
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div>
-									<span>Pros:</span>Unique, alternative appearance
-								</div>
-								<div>
-									<span>Cons:</span>Lacks popularity
-								</div>
+								<div><a href="docs/software/desktop/#gnustep-alternativeunique-desktop" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<br>
+								<div><span>Pros:</span>Unique, alternative appearance</div>
+								<div><span>Cons:</span>Lacks popularity</div>
 							</div>
 							<p>Unique desktop</p>
 							<div class="project-title"></div>
@@ -214,12 +206,8 @@
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div>
-									<span>Pros:</span>Excellent performance, stability and standards support.
-								</div>
-								<div>
-									<span>Cons:</span>TBA
-								</div>
+								<div><span>Pros:</span>Excellent performance, stability and standards support.</div>
+								<div><span>Cons:</span>TBA</div>
 							</div>
 							<div class="project-title"></div>
 							<p><b>Does my device support HW GPU acceleration?</b></p>
@@ -243,20 +231,14 @@
 					<div class="col-md-8">
 						<div class="project-description">
 							<div class="project-title clearfix">
-								<h3>VNC Server</h3>
+								<h3>TigerVNC Server</h3>
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div>
-									<a href="phpbb/viewtopic.php?f=8&t=5&start=30#p408" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
-								</div>
-								<div>
-									<br>
-									<span>Pros:</span>Efficient, lightweight VNC server
-								</div>
-								<div>
-									<span>Cons:</span>TBA
-								</div>
+								<div><a href="phpbb/viewtopic.php?p=408#p408" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b></a></div>
+								<br>
+								<div><span>Pros:</span>Efficient, lightweight VNC server</div>
+								<div><span>Cons:</span>TBA</div>
 							</div>
 							<p>Run a Desktop environment on your device that can be accessed remotely, over the network. Great for headless devices.</p>
 						</div>
@@ -272,16 +254,10 @@
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div>
-									<a href="phpbb/viewtopic.php?f=8&t=5&start=60#p2071" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
-								</div>
-								<div>
-									<br>
-									<span>Pros:</span>Feature rich remote desktop server
-								</div>
-								<div>
-									<span>Cons:</span>TBA
-								</div>
+								<div><a href="docs/software/remote_desktop/#nomachine-feature-rich-remote-desktop-connection" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<br>
+								<div><span>Pros:</span>Feature rich remote desktop server</div>
+								<div><span>Cons:</span>TBA</div>
 							</div>
 							<p>Remote desktop server with advanced features, such as screen recording. The client also scans for all available NoMachine servers on your network, allowing easy connection and maintenance of your remote desktops.</p>
 						</div>
@@ -298,16 +274,10 @@
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div>
-									<a href="phpbb/viewtopic.php?f=8&t=5&start=70#p2074" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
-								</div>
-								<div>
-									<br>
-									<span>Pros:</span>Supports Windows Remote Desktop Client.
-								</div>
-								<div>
-									<span>Cons:</span>TBA
-								</div>
+								<div><a href="docs/software/remote_desktop/#xrdp-remote-desktop-server-for-windows-remote-desktop-client" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<br>
+								<div><span>Pros:</span>Supports Windows Remote Desktop Client.</div>
+								<div><span>Cons:</span>TBA</div>
 							</div>
 							<p>Remote desktop supporting the Windows Remote Desktop Client.</p>
 						</div>
@@ -477,7 +447,7 @@
 							</div>
 							<div class="project-info">
 								<div>
-									<a href="phpbb/viewtopic.php?f=8&t=5&p=11280#p11280" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
+									<a href="phpbb/viewtopic.php?p=11280#p11280" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
 								</div>
 								<div>
 									<br>
@@ -529,7 +499,7 @@
 							</div>
 							<div class="project-info">
 								<div>
-									<a href="phpbb/viewtopic.php?f=8&t=5&p=1009#p1009" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
+									<a href="phpbb/viewtopic.php?p=1009#p1009" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
 								</div>
 								<div>
 									<br>
@@ -582,7 +552,7 @@
 							</div>
 							<div class="project-info">
 								<div>
-									<a href="phpbb/viewtopic.php?f=8&t=5&p=1221#p1221" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
+									<a href="phpbb/viewtopic.php?p=1221#p1221" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
 								</div>
 								<div>
 									<br>
@@ -634,7 +604,7 @@
 							</div>
 							<div class="project-info">
 								<div>
-									<a href="phpbb/viewtopic.php?f=8&t=5&p=1789#p1789" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
+									<a href="phpbb/viewtopic.php?p=1789#p1789" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
 								</div>
 								<div>
 									<br>
@@ -686,7 +656,7 @@
 							</div>
 							<div class="project-info">
 								<div>
-									<a href="phpbb/viewtopic.php?f=8&t=5&p=7463#p7463" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
+									<a href="phpbb/viewtopic.php?p=7463#p7463" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
 								</div>
 								<div>
 									<br>
@@ -712,7 +682,7 @@
 							</div>
 							<div class="project-info">
 								<div>
-									<a href="phpbb/viewtopic.php?f=8&t=5&p=1691#p1691" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
+									<a href="phpbb/viewtopic.php?p=1691#p1691" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
 								</div>
 								<div>
 									<br>
@@ -868,7 +838,7 @@
 							</div>
 							<div class="project-info">
 								<div>
-									<a href="phpbb/viewtopic.php?f=8&t=5&p=9012#p9012" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
+									<a href="phpbb/viewtopic.php?p=9012#p9012" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
 								</div>
 								<div>
 									<br>
@@ -1698,7 +1668,7 @@ TLDR: Basically, it allows you to create a complete system backup, using a simpl
 									<span>Cons:</span>Somewhat bulky installation, due to web server requirement
 								</div>
 							</div>
-							<p>If you always wanted your very own forum, PHPBB3 is all you need.</p>
+							<p>If you always wanted your very own forum, phpBB is all you need.</p>
 						</div>
 					</div>
 				</div>
@@ -2283,11 +2253,11 @@ Perfect for users requiring anonymity and privacy.</p>
 				</div>
 				<!-- Start details for portfolio project 86 -->
 				<div id="slidingdiv86" class="toggleDiv row single-project">
-					<div class="col-md-4"><a href="images/dietpi-software/noimage_2.jpg" target="_blank" rel="noopener"><img src="images/dietpi-software/noimage_1.jpg" alt="PhpSysInfo" loading="lazy"></a></div>
+					<div class="col-md-4"><a href="images/dietpi-software/noimage_2.jpg" target="_blank" rel="noopener"><img src="images/dietpi-software/noimage_1.jpg" alt="phpSysInfo" loading="lazy"></a></div>
 					<div class="col-md-8">
 						<div class="project-description">
 							<div class="project-title clearfix">
-								<h3>PhpSysInfo</h3>
+								<h3>phpSysInfo</h3>
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
@@ -2486,11 +2456,11 @@ Perfect for users requiring anonymity and privacy.</p>
 				</div>
 				<!-- Start details for portfolio project 94 -->
 				<div id="slidingdiv94" class="toggleDiv row single-project">
-					<div class="col-md-4"><a href="images/dietpi-software/noimage_2.jpg" target="_blank" rel="noopener"><img src="images/dietpi-software/noimage_1.jpg" alt="PhpMyAdmin" loading="lazy"></a></div>
+					<div class="col-md-4"><a href="images/dietpi-software/noimage_2.jpg" target="_blank" rel="noopener"><img src="images/dietpi-software/noimage_1.jpg" alt="phpMyAdmin" loading="lazy"></a></div>
 					<div class="col-md-8">
 						<div class="project-description">
 							<div class="project-title clearfix">
-								<h3>PhpMyAdmin</h3>
+								<h3>phpMyAdmin</h3>
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
@@ -2640,7 +2610,7 @@ Perfect for users requiring anonymity and privacy.</p>
 					<div class="col-md-8">
 						<div class="project-description">
 							<div class="project-title clearfix">
-								<h3>vsFTPD</h3>
+								<h3>vsftpd</h3>
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
@@ -2745,7 +2715,7 @@ Perfect for users requiring anonymity and privacy.</p>
 							</div>
 							<div class="project-info">
 								<div>
-									<a href="phpbb/viewtopic.php?f=8&t=5&start=100#p6630" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
+									<a href="phpbb/viewtopic.php?p=6630#p6630" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
 								</div>
 								<div>
 									<br>
@@ -3170,7 +3140,7 @@ Perfect for users requiring anonymity and privacy.</p>
 						<div class="thumbnail">
 							<img src="images/dietpi-software/xfce_0.jpg" alt="project 3" loading="lazy">
 							<a href="#downloadinfo" class="more show_hide" rel="#slidingdiv3"><i class="fa fa-plus"></i></a>
-							<h3>XFCE</h3>
+							<h3>Xfce</h3>
 							<p>Lightweight Desktop</p>
 							<div class="mask"></div>
 						</div>
@@ -3198,7 +3168,7 @@ Perfect for users requiring anonymity and privacy.</p>
 						<div class="thumbnail">
 							<img src="images/dietpi-software/vnc_0.jpg" alt="project 6" loading="lazy">
 							<a href="#downloadinfo" class="more show_hide" rel="#slidingdiv6"><i class="fa fa-plus"></i></a>
-							<h3>VNC Server</h3>
+							<h3>TigerVNC</h3>
 							<p>Remote Desktop</p>
 							<div class="mask"></div>
 						</div>
@@ -3749,7 +3719,7 @@ Perfect for users requiring anonymity and privacy.</p>
 						<div class="thumbnail">
 							<img src="images/dietpi-software/phpbb3_0.jpg" alt="project 62" loading="lazy">
 							<a href="#downloadinfo" class="more show_hide" rel="#slidingdiv62"><i class="fa fa-plus"></i></a>
-							<h3>phpBB3</h3>
+							<h3>phpBB</h3>
 							<p>Forums (Same as ours!)</p>
 							<div class="mask"></div>
 						</div>
@@ -3965,7 +3935,7 @@ Perfect for users requiring anonymity and privacy.</p>
 						<div class="thumbnail">
 							<img src="images/dietpi-software/phpsysinfo_0.jpg" alt="project 86" loading="lazy">
 							<a href="#downloadinfo" class="more show_hide" rel="#slidingdiv86"><i class="fa fa-plus"></i></a>
-							<h3>PhpSysInfo</h3>
+							<h3>phpSysInfo</h3>
 							<p>Web interface system stats</p>
 							<div class="mask"></div>
 						</div>
@@ -4037,7 +4007,7 @@ Perfect for users requiring anonymity and privacy.</p>
 						<div class="thumbnail">
 							<img src="images/dietpi-software/phpmyadmin_0.jpg" alt="project 94" loading="lazy">
 							<a href="#downloadinfo" class="more show_hide" rel="#slidingdiv94"><i class="fa fa-plus"></i></a>
-							<h3>PhpMyAdmin</h3>
+							<h3>phpMyAdmin</h3>
 							<p>Web interface SQL admin tool</p>
 							<div class="mask"></div>
 						</div>
@@ -4091,7 +4061,7 @@ Perfect for users requiring anonymity and privacy.</p>
 						<div class="thumbnail">
 							<img src="images/dietpi-software/vsftpd_0.jpg" alt="project 100" loading="lazy">
 							<a href="#downloadinfo" class="more show_hide" rel="#slidingdiv100"><i class="fa fa-plus"></i></a>
-							<h3>vsFTPD</h3>
+							<h3>vsftpd</h3>
 							<p>Feature-rich FTP file server</p>
 							<div class="mask"></div>
 						</div>
