Fix spelling in forgotten image alternative tag

--- a/dietpi-software.html
+++ b/dietpi-software.html
@@ -2606,7 +2606,7 @@ Perfect for users requiring anonymity and privacy.</p>
 				</div>
 				<!-- Start details for portfolio project 100 -->
 				<div id="slidingdiv100" class="toggleDiv row single-project">
-					<div class="col-md-4"><a href="images/dietpi-software/vsftpd_0.jpg" target="_blank" rel="noopener"><img src="images/dietpi-software/vsftpd_0.jpg" alt="vsFTPD" loading="lazy"></a></div>
+					<div class="col-md-4"><a href="images/dietpi-software/vsftpd_0.jpg" target="_blank" rel="noopener"><img src="images/dietpi-software/vsftpd_0.jpg" alt="vsftpd" loading="lazy"></a></div>
 					<div class="col-md-8">
 						<div class="project-description">
 							<div class="project-title clearfix">
