New Odroid HC4 is available, compatible with Odroid C4

--- a/index.html
+++ b/index.html
@@ -1348,7 +1348,7 @@
 				<div id="slidingdiv42" class="toggleDiv single-project">
 					<div class="row">
 						<div class="col-md-12 project-title clearfix">
-							<h3>Odroid C4</h3>
+							<h3>Odroid C4/HC4</h3>
 							<span class="show_hide close"><i class="fa fa-times"></i></span>
 						</div>
 					</div>
@@ -1403,7 +1403,7 @@
 						<div class="thumbnail">
 							<img src="images/sbc_images/odroidc4.jpg" alt="Odroid C4 photo" loading="lazy">
 							<a href="#downloadinfo" class="more show_hide" rel="#slidingdiv42"><i class="fa fa-plus"></i></a>
-							<h3>Odroid C4</h3>
+							<h3>Odroid C4/HC4</h3>
 							<p>S905X3 2 GHz | 4 cores | ARMv8</p>
 							<div class="mask"></div>
 						</div>
