Update new software docs links

--- a/dietpi-software.html
+++ b/dietpi-software.html
@@ -105,7 +105,7 @@
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div><a href="docs/software/desktop/#lxde-ultra-lightweight-desktop" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<div><a href="docs/software/desktop/#lxde" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
 								<br>
 								<div><span>Pros:</span>Ultra lightweight, fast and functional desktop</div>
 								<div><span>Cons:</span>TBA</div>
@@ -131,7 +131,7 @@
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div><a href="docs/software/desktop/#mate-popular-gnome2-desktop" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<div><a href="docs/software/desktop/#mate" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
 								<br>
 								<div><span>Pros:</span>Lightweight, feature-rich</div>
 								<div><span>Cons:</span>TBA</div>
@@ -156,7 +156,7 @@
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div><a href="docs/software/desktop/#xfce-lightweight-desktop" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<div><a href="docs/software/desktop/#xfce" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
 								<br>
 								<div><span>Pros:</span>Lightweight, feature-rich</div>
 								<div><span>Cons:</span>Reduced performance, when compared to LXDE/MATE.</div>
@@ -181,7 +181,7 @@
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div><a href="docs/software/desktop/#gnustep-alternativeunique-desktop" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<div><a href="docs/software/desktop/#gnustep" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
 								<br>
 								<div><span>Pros:</span>Unique, alternative appearance</div>
 								<div><span>Cons:</span>Lacks popularity</div>
@@ -254,7 +254,7 @@
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div><a href="docs/software/remote_desktop/#nomachine-feature-rich-remote-desktop-connection" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<div><a href="docs/software/remote_desktop/#nomachine" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
 								<br>
 								<div><span>Pros:</span>Feature rich remote desktop server</div>
 								<div><span>Cons:</span>TBA</div>
@@ -274,7 +274,7 @@
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div><a href="docs/software/remote_desktop/#xrdp-remote-desktop-server-for-windows-remote-desktop-client" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<div><a href="docs/software/remote_desktop/#xrdp" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
 								<br>
 								<div><span>Pros:</span>Supports Windows Remote Desktop Client.</div>
 								<div><span>Cons:</span>TBA</div>
