Remove Cloud Print and Tonido which have been removed from DietPi-Software

--- a/dietpi-software.html
+++ b/dietpi-software.html
@@ -1597,31 +1597,6 @@ TLDR: Basically, it allows you to create a complete system backup, using a simpl
 						</div>
 					</div>
 				</div>
-				<!-- Start details for portfolio project 60 -->
-				<div id="slidingdiv60" class="toggleDiv row single-project">
-					<div class="col-md-4"><a href="images/dietpi-software/tonido_2.jpg" target="_blank" rel="noopener"><img src="images/dietpi-software/tonido_1.jpg" alt="Tonido" loading="lazy"></a></div>
-					<div class="col-md-8">
-						<div class="project-description">
-							<div class="project-title clearfix">
-								<h3>Tonido</h3>
-								<span class="show_hide close"><i class="fa fa-times"></i></span>
-							</div>
-							<div class="project-info">
-								<div>
-									<a href="phpbb/viewtopic.php?f=8&t=5&start=90#p6476" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
-								</div>
-								<div>
-									<br>
-									<span>Pros:</span>Lightweight install, due to no web server requirement
-								</div>
-								<div>
-									<span>Cons:</span>Lacks popularity, compared to ownCloud/Nextcloud
-								</div>
-							</div>
-							<p>Lightweight backup and sync server, includes web interface and external cloud access.</p>
-						</div>
-					</div>
-				</div>
 				<!-- Start details for portfolio project 61 -->
 				<div id="slidingdiv61" class="toggleDiv row single-project">
 					<div class="col-md-4"><a href="images/dietpi-software/minio_0.jpg" target="_blank" rel="noopener"><img src="images/dietpi-software/minio_0.jpg" alt="Minio" loading="lazy"></a></div>
@@ -2212,7 +2187,7 @@ Perfect for users requiring anonymity and privacy.</p>
 							</div>
 							<div class="project-info">
 								<div>
-									<a href="phpbb/viewtopic.php?f=8&t=5&start=20#p204" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
+									<a href="docs/software/system_stats/#dietpi-cloudshell" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
 								</div>
 								<div>
 									<br>
@@ -2701,31 +2676,6 @@ Perfect for users requiring anonymity and privacy.</p>
 								</div>
 							</div>
 							<p>OpenVPN installer & management tool. It also has a command <code>pivpn</code> which allows for simple creation of additional user OpenVPN profiles.</p>
-						</div>
-					</div>
-				</div>
-				<!-- Start details for portfolio project 104 -->
-				<div id="slidingdiv104" class="toggleDiv row single-project">
-					<div class="col-md-4"><a href="images/dietpi-software/cloudprint_0.jpg" target="_blank" rel="noopener"><img src="images/dietpi-software/cloudprint_0.jpg" alt="Cloud Print" loading="lazy"></a></div>
-					<div class="col-md-8">
-						<div class="project-description">
-							<div class="project-title clearfix">
-								<h3>Cloud Print</h3>
-								<span class="show_hide close"><i class="fa fa-times"></i></span>
-							</div>
-							<div class="project-info">
-								<div>
-									<a href="phpbb/viewtopic.php?p=6630#p6630" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
-								</div>
-								<div>
-									<br>
-									<span>Pros:</span>TBA
-								</div>
-								<div>
-									<span>Cons:</span>TBA
-								</div>
-							</div>
-							<p>CUPS print server, with support for Google cloud printing. Also includes a web interface for CUPS, allowing easy setup of printers.</p>
 						</div>
 					</div>
 				</div>
@@ -3690,15 +3640,6 @@ Perfect for users requiring anonymity and privacy.</p>
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix Cloud">
 						<div class="thumbnail">
-							<img src="images/dietpi-software/tonido_0.jpg" alt="project 60" loading="lazy">
-							<a href="#downloadinfo" class="more show_hide" rel="#slidingdiv60"><i class="fa fa-plus"></i></a>
-							<h3>Tonido</h3>
-							<p>Backup/sync server & web interface</p>
-							<div class="mask"></div>
-						</div>
-					</div>
-					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix Cloud">
-						<div class="thumbnail">
 							<img src="images/dietpi-software/minio_0.jpg" alt="project 61" loading="lazy">
 							<a href="#downloadinfo" class="more show_hide" rel="#slidingdiv61"><i class="fa fa-plus"></i></a>
 							<h3>Minio</h3>
@@ -4099,15 +4040,6 @@ Perfect for users requiring anonymity and privacy.</p>
 							<a href="#downloadinfo" class="more show_hide" rel="#slidingdiv103"><i class="fa fa-plus"></i></a>
 							<h3>PiVPN</h3>
 							<p>OpenVPN management tool</p>
-							<div class="mask"></div>
-						</div>
-					</div>
-					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix Printing">
-						<div class="thumbnail">
-							<img src="images/dietpi-software/cloudprint_0.jpg" alt="project 104" loading="lazy">
-							<a href="#downloadinfo" class="more show_hide" rel="#slidingdiv104"><i class="fa fa-plus"></i></a>
-							<h3>Cloud Print</h3>
-							<p>CUPS & Google cloud printing</p>
 							<div class="mask"></div>
 						</div>
 					</div>
