Changed links from phbb to new doc site
See https://github.com/MichaIng/DietPi-Website/issues/15.

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 			</div>
 		</div>
 		<!-- End home section -->
-		<!-- Features section start -->
+    <!-- Features section start -->
 		<div class="section primary-section" id="features">
 			<div class="container-xl centered">
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none"><polygon points="0,0 100,0 50,100"/></svg>
@@ -134,7 +134,7 @@
 						<p>DietPi is an extremely lightweight Debian OS, highly optimised for minimal CPU and RAM resource usage, ensuring your SBC always runs at its maximum potential.</p>
 					</div>
 					<div class="col-sm-4 service">
-						<a href="phpbb/viewtopic.php?p=1061#p1061" target="_blank" rel="noopener">
+						<a href="https://dietpi.com/docs/dietpi_tools/#dietpi-launcher" target="_blank" rel="noopener">
 							<img class="circle-border zoom-in" src="images/dietpi-interface.png" alt="Whiptail" loading="lazy">
 							<h3>Simple interface</h3>
 						</a>
@@ -150,21 +150,21 @@
 				</div>
 				<div class="row">
 					<div class="col-sm-4 service">
-						<a href="phpbb/viewtopic.php?p=218#p218" target="_blank" rel="noopener">
+						<a href="https://dietpi.com/docs/dietpi_tools/#configuration" target="_blank" rel="noopener">
 							<img class="circle-border zoom-in" src="images/dietpi-config.png" alt="Gear" loading="lazy">
 							<h3>DietPi-Config</h3>
 						</a>
 						<p>Customise your device's hardware and software, your way. A tweakers wet dream!</p>
 					</div>
 					<div class="col-sm-4 service">
-						<a href="phpbb/viewtopic.php?p=255#p255" target="_blank" rel="noopener">
+						<a href="https://dietpi.com/docs/dietpi_tools/#update-backup" target="_blank" rel="noopener">
 							<img class="circle-border zoom-in" src="images/dietpi-backup.png" alt="Backup icon" loading="lazy">
 							<h3>DietPi-Backup</h3>
 						</a>
 						<p>Quickly and easily backup or restore your DietPi system.</p>
 					</div>
 					<div class="col-sm-4 service">
-						<a href="phpbb/viewtopic.php?p=68#p68" target="_blank" rel="noopener">
+						<a href="https://dietpi.com/docs/software/log_system/" target="_blank" rel="noopener">
 							<img class="circle-border zoom-in" src="images/dietpi-logging.png" alt="Logging icon" loading="lazy">
 							<h3>Logging System Choices</h3>
 						</a>
@@ -173,7 +173,7 @@
 				</div>
 				<div class="row">
 					<div class="col-sm-4 service">
-						<a href="phpbb/viewtopic.php?p=5393#p5393" target="_blank" rel="noopener">
+						<a href="https://dietpi.com/docs/dietpi_tools/#configuration" target="_blank" rel="noopener">
 							<img class="circle-border zoom-in" src="images/dietpi-services.png" alt="CPU icon" loading="lazy">
 							<h3>DietPi-Services Control</h3>
 						</a>
