--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 							<img class="circle-border zoom-in" src="images/dietpi-config.png" alt="Gear" loading="lazy">
 							<h3>DietPi-Config</h3>
 						</a>
-						<p>Customise your device's hardware and software, your way. A tweakers wet dream!</p>
+						<p>Customise your devices hardware and software, your way. A tweakers wet dream!</p>
 					</div>
 					<div class="col-sm-4 service">
 						<a href="https://dietpi.com/docs/dietpi_tools/#update-backup" target="_blank" rel="noopener">
